Added metadata and statistics for bird association squares query, added new endpoint for bird associations, minor changes to error logging.
